--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -1,11 +1,45 @@
 @media screen {
 	body {
-		background-color: #efefef;
+		background-color: #ffffff;
 		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 		padding-bottom: 100px;
 	}
-	.green {
-		color: #99cc49;
+	$green: #99cc49;
+	$blue: rgb(0, 185, 207);
+	$red: rgb(240, 78, 85);
+	a {
+		text-decoration: none;
+		color: black;
+	}
+	header {
+		margin-top: 40px;
+		width: 1200px;
+		font-size: 18px;
+		h1 {
+			font-size: 18px;
+			margin-top: 0;
+			font-weight: normal;
+			float: left;
+			width: 300px;
+		}
+	}
+	nav {
+		width: 1150px;
+		text-align: right;
+		font-size: 18px;
+		a {
+			margin-top: 0;
+			margin-left: 20px;
+		}
+		.Define {
+			color: $green;
+		}
+		.Make {
+			color: $red;
+		}
+		.Learn {
+			color: $blue;
+		}
 	}
 	#cardForm {
 		.droptarget {
@@ -33,72 +67,155 @@
 			}
 		}
 	}
-	.card {
-		width: 1280px;
-		height: 720px;
-		background-color: white;
-		.content {
-			box-sizing: border-box;
-			width: 460px;
-			padding-top: 35px;
-			padding-left: 25px;
-			float: left;
-			h3 {
-				font-size: 40px;
-				margin-top: 0;
-				margin-bottom: 50px;
-				font-weight: normal;
+	.allCards {
+		// width: 1200px;
+		clear: both;
+		transition: opacity .25s ease-in-out;
+		opacity: 1;
+		.card {
+			// border-radius: 10px;
+			width: 280px;
+			background-color: #eeeeee;
+			// box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.18);
+			img {
+				width: 100%;
+				// border-radius: 10px 10px 0px 0px;
+		
 			}
-			h4 {
-				font-size: 24px;
-				margin-top: 0;
-				margin-bottom: 14px;
-				font-weight: 500;
-				position: absolute;
-				bottom: 20px;
+			&.Make h3 {
+				color: $red;
 			}
-			h5 {
-				font-size: 16px;
-				margin-top: 0;
-				margin-bottom: 0px;
-				font-weight: bold;
-				font-weight: 500;
+			&.Define h3 {
+				color: $green;
 			}
-			p {
-				font-size: 30px;
-				margin-top: 0;
-				padding-right: 80px;
-				font-weight: lighter;
+			&.Learn h3 {
+				color: $blue;
 			}
-			.goals {
-				margin-top: 34px;
-				padding-right: 20px;
-				li {
-					color: #898581;
-					font-style: italic;
-					font-weight: 500;
-					font-size: 20px;
+			.content {
+				padding: 20px;
+				color: black;
+				h3 {
+					font-size: 18px;
+					font-weight: normal;
+					margin: 0;
+				}
+				h4 {
+					font-size: 14px;
+					font-weight: normal;
+					margin: 0;
+					display: none;
+				}
+				p {
+					font-size: 14px;
+				}
+				.goals {
+					padding-left: 20px;
+					display: none;
+				}
+				.tags {
+					display: none;
+					padding: 0;
+					li {
+						font-weight: 500;
+						font-size: 14px;
+						list-style: none;
+						display: inline;
+						color: #797570;
+						// text-transform: uppercase;
+				
+					}
 				}
 			}
 		}
-		.image {
-			width: 820px;
-			float: left;
-			img {
-				width: 820px;
-				height: 640px;
+		.card--width2 {
+			width: 50%;
+		}
+	}
+	.allCards.faded {
+		opacity: 0;
+	}
+	.expandedCard {
+		position: absolute;
+		// margin-left: auto;
+		// margin-right: auto;
+		width: 1280px;
+		left: 0;
+		right: 0;
+		top: 60px;
+		padding-top: 20px;
+		.card {
+			width: 1280px;
+			height: 720px;
+			background-color: #eeeeee;
+			&.Make h3 {
+				color: $red;
 			}
-			.tags {
-				padding-left: 20px;
-				padding-top: 10px;
-				li {
+			&.Define h3 {
+				color: $green;
+			}
+			&.Learn h3 {
+				color: $blue;
+			}
+			.content {
+				box-sizing: border-box;
+				width: 460px;
+				padding-left: 25px;
+				float: left;
+				h3 {
+					font-size: 20px;
+					margin-top: 0;
+					margin-bottom: 50px;
+					font-weight: normal;
+				}
+				h4 {
+					font-size: 20px;
+					margin-top: 0;
+					margin-bottom: 14px;
 					font-weight: 500;
-					font-size: 14px;
-					list-style: none;
-					display: inline;
-					color: #797570;
-					margin-right: 50px;
-					text-transform: uppercase;
+					bottom: 20px;
+					display: none;
+				}
+				h5 {
+					font-size: 16px;
+					margin-top: 0;
+					margin-bottom: 0px;
+					font-weight: bold;
+					font-weight: 500;
+				}
+				p {
+					font-size: 20px;
+					margin-top: 0;
+					padding-right: 80px;
+					font-weight: normal;
+				}
+				.goals {
+					margin-top: 34px;
+					li {
+						font-weight: 300;
+						font-size: 20px;
+						margin-left: 0;
+						padding-right: 20px;
+					}
+				}
+				.tags {
+					padding-left: 0px;
+					li {
+						font-weight: 500;
+						font-size: 12px;
+						list-style: none;
+						display: inline;
+						color: black;
+						margin-right: 0px;
+						text-transform: uppercase;
+					}
+				}
+			}
+			.image {
+				width: 820px;
+				float: left;
+				img {
+					width: 820px;
+					height: 640px;
 				}
 			}
 		}
